--- a/.flexget/config.yml
+++ b/.flexget/config.yml
@@ -1,3 +1,5 @@
+variables: variables.yml
+
 templates:
 
   torrent:
@@ -7,7 +9,7 @@ templates:
   tv:
     thetvdb_lookup: yes
     transmission:
-      path: /media/tosh500/MediaLibrary/TVShows/{{series_name}}/Season {{series_season}}
+      path: /media/tosh500/Torrent/Completed/TVShows/{{series_name}}/Season {{series_season}}
 
   movies:
     imdb_lookup: yes
@@ -21,34 +23,40 @@ templates:
       reject_genres:
         - horror
     transmission:
-      path: /media/tosh500/MediaLibrary/Movies/{{imdb_name}} ({{imdb_year}})
+      path: /media/tosh500/Torrent/Completed/Movies/{{imdb_name}} ({{imdb_year}})
 
   notify:
     notify:
-      task:
-        template: html
+      entries:
+        message: |+
+          {% if imdb_name is defined %}
+          *#New Movie*
+          [{{imdb_name}} ({{imdb_year}})]({{imdb_url|d('')}})
+          Score: {{imdb_score}}/10 - {{imdb_votes}} votes
+          {% endif %}
+          {% if tvdb_series_name is defined %}
+          *#New Episode*
+          {{tvdb_series_name}}
+          S{{'%02d' % tvdb_season}}E{{'%02d' % tvdb_episode}}
+          {% endif %}
         via:
-          - email:
-              from: *****<*****@gmail.com>
-              to: *****@gmail.com
-              smtp_host: smtp.gmail.com
-              smtp_port: 587
-              smtp_username: *****
-              smtp_password: *****
-              smtp_tls: yes
-              html: yes
+          - telegram:
+              bot_token: '{? telegram.bot.token ?}'
+              parse_mode: markdown
+              recipients:
+                - username: '{? telegram.bot.recipient ?}'
 
 tasks:
 
   showrss:
-    rss: http://showrss.info/user/*****.rss?magnets=true&namespaces=true&name=null&quality=null&re=null
+    rss: '{? feed.showrss ?}'
     all_series: yes
     template:
       - torrent
       - tv
       - notify
 
-  yifi:
+  yify:
     rss: https://yts.ag/rss/0/all/all/0
     quality:
       - 720p
