--- a/config/deluge/core.conf
+++ b/config/deluge/core.conf
@@ -13,9 +13,11 @@
     "del_copy_torrent_file": false,
     "dht": true,
     "dont_count_slow_torrents": false,
-    "download_location": "/root/Downloads",
+    "download_location": "/downloads/in-progress",
     "download_location_paths_list": [],
-    "enabled_plugins": [],
+    "enabled_plugins": [
+        "Label"
+    ],
     "enc_in_policy": 1,
     "enc_level": 2,
     "enc_out_policy": 1,
@@ -45,7 +47,7 @@
     "max_upload_speed": -1.0,
     "max_upload_speed_per_torrent": -1,
     "move_completed": false,
-    "move_completed_path": "/root/Downloads",
+    "move_completed_path": "/downloads/completed",
     "move_completed_paths_list": [],
     "natpmp": true,
     "new_release_check": false,
@@ -60,7 +62,7 @@
     "path_chooser_show_chooser_button_on_localhost": true,
     "path_chooser_show_hidden_files": false,
     "peer_tos": "0x00",
-    "plugins_location": "/config/plugins",
+    "plugins_location": "/deluge/plugins",
     "pre_allocate_storage": false,
     "prioritize_first_last_pieces": false,
     "proxy": {
@@ -75,7 +77,7 @@
         "type": 0,
         "username": ""
     },
-    "queue_new_to_top": false,
+    "queue_new_to_top": true,
     "random_outgoing_ports": true,
     "random_port": true,
     "rate_limit_ip_overhead": true,
@@ -89,7 +91,7 @@
     "stop_seed_at_ratio": false,
     "stop_seed_ratio": 2.0,
     "super_seeding": false,
-    "torrentfiles_location": "/root/Downloads",
+    "torrentfiles_location": "/downloads/torrent",
     "upnp": true,
     "utpex": true
 }
