--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,6 @@ config/flexget/*
 !config/flexget/config.yml
 !config/flexget/variables.yml.example
 
-# Deluge configuration only
-config/deluge/*
-!config/deluge/core.conf
-
 # Transmission configuration only
-config/ransmission/*
+config/transmission/*
 !config/transmission/settings.json
