--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,9 @@ services:
       - 51413:51413/tcp
       - 51413:51413/udp
     volumes:
-    - ./config/transmission:/transmission
-    - ./config/flexget:/flexget
+      - ./config/transmission:/transmission
+      - ./config/flexget:/flexget
+      - ./data/:/data
 
   plex:
     image: plexinc/pms-docker
@@ -21,17 +22,16 @@ services:
     hostname: plex
     restart: unless-stopped
     ports:
-    - 32400:32400/tcp
-    - 3005:3005/tcp
-    - 8324:8324/tcp
-    - 32469:32469/tcp
-    - 1900:1900/udp
-    - 32410:32410/udp
-    - 32412:32412/udp
-    - 32413:32413/udp
-    - 32414:32414/udp
-    #volumes:
-    #- <path/to/plex/database>:/config
-    #- <path/to/transcode/temp>:/transcode
-    #- <path/to/media>:/data
-    
+      - 32400:32400/tcp
+      - 3005:3005/tcp
+      - 8324:8324/tcp
+      - 32469:32469/tcp
+      - 1900:1900/udp
+      - 32410:32410/udp
+      - 32412:32412/udp
+      - 32413:32413/udp
+      - 32414:32414/udp
+    volumes:
+      - ./data:/data
+      - ./config/plex/config:/config
+      - ./config/plex/temp:/transcode
