--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./data/:/data
 
   plex:
-    image: plexinc/pms-docker
+    image: plexinc/pms-docker:plexpass
     container_name: mboxplex
     hostname: plex
     restart: unless-stopped
@@ -33,5 +33,9 @@ services:
       - 32414:32414/udp
     volumes:
       - ./data:/data
-      - ./config/plex/config:/config
-      - ./config/plex/temp:/transcode
+      - plextemp:/transcode
+      - plexconfig:/config
+
+volumes:
+  plexconfig:
+  plextemp:
