--- a/config/transmission/settings.json
+++ b/config/transmission/settings.json
@@ -1,33 +1,30 @@
 {
-    "alt-speed-down": 600,
-    "alt-speed-enabled": true,
-    "alt-speed-time-begin": 480,
+    "alt-speed-down": 50,
+    "alt-speed-enabled": false,
+    "alt-speed-time-begin": 540,
     "alt-speed-time-day": 127,
-    "alt-speed-time-enabled": true,
-    "alt-speed-time-end": 60,
-    "alt-speed-up": 4,
+    "alt-speed-time-enabled": false,
+    "alt-speed-time-end": 1020,
+    "alt-speed-up": 50,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/data/torrent/completed",
-    "download-limit": 100,
-    "download-limit-enabled": 0,
+    "download-dir": "/downloads/complete",
     "download-queue-enabled": true,
-    "download-queue-size": 2,
+    "download-queue-size": 5,
     "encryption": 1,
-    "idle-seeding-limit": 1,
-    "idle-seeding-limit-enabled": true,
-    "incomplete-dir": "/data/torrent/inprogress",
+    "idle-seeding-limit": 30,
+    "idle-seeding-limit-enabled": false,
+    "incomplete-dir": "/downloads/incomplete",
     "incomplete-dir-enabled": true,
     "lpd-enabled": false,
-    "max-peers-global": 100,
-    "message-level": 1,
+    "message-level": 2,
     "peer-congestion-algorithm": "",
     "peer-id-ttl-hours": 6,
-    "peer-limit-global": 100,
+    "peer-limit-global": 200,
     "peer-limit-per-torrent": 50,
     "peer-port": 51413,
     "peer-port-random-high": 65535,
@@ -35,23 +32,23 @@
     "peer-port-random-on-start": false,
     "peer-socket-tos": "default",
     "pex-enabled": true,
-    "port-forwarding-enabled": false,
+    "port-forwarding-enabled": true,
     "preallocation": 1,
     "prefetch-enabled": true,
     "queue-stalled-enabled": true,
     "queue-stalled-minutes": 30,
-    "ratio-limit": 0,
-    "ratio-limit-enabled": true,
+    "ratio-limit": 2,
+    "ratio-limit-enabled": false,
     "rename-partial-files": true,
     "rpc-authentication-required": false,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
     "rpc-host-whitelist": "",
-    "rpc-host-whitelist-enabled": true,
-    "rpc-password": "{2fb60f9d928e5d9fc08b885c2ab0d7b34c285a2e6xZVYiKN",
+    "rpc-host-whitelist-enabled": false,
+    "rpc-password": "{1ddd3f1f6a71d655cde7767242a23a575b44c909n5YuRT.f",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
-    "rpc-username": "transmission",
+    "rpc-username": "",
     "rpc-whitelist": "127.0.0.1",
     "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
@@ -59,17 +56,15 @@
     "script-torrent-done-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
-    "speed-limit-down": 320,
-    "speed-limit-down-enabled": true,
-    "speed-limit-up": 8,
-    "speed-limit-up-enabled": true,
+    "speed-limit-down": 100,
+    "speed-limit-down-enabled": false,
+    "speed-limit-up": 100,
+    "speed-limit-up-enabled": false,
     "start-added-torrents": true,
     "trash-original-torrent-files": false,
-    "umask": 18,
-    "upload-limit": 100,
-    "upload-limit-enabled": 0,
+    "umask": 2,
     "upload-slots-per-torrent": 14,
-    "utp-enabled": true,
-    "watch-dir": "/data/torrent/watch",
+    "utp-enabled": false,
+    "watch-dir": "/watch",
     "watch-dir-enabled": true
 }
